Add & style game container

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <script src="script.js" defer></script>
     <title>Roshambo 1.0</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper"><div class="container"></div></div>
+  </body>
 </html>
