Add roshambo.js link

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <script src="script.js" defer></script>
+    <script src="roshambo.js" defer></script>
     <title>Roshambo 1.0</title>
   </head>
   <body>
