Add ui container & selection buttons

--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
   <body>
     <div class="wrapper">
       <div class="container">
-        <button id="play" class="btn">Play</button>
+        <!-- <button id="play" class="btn">Play</button> -->
+        <div class="container-ui">
+          <button id="scissors" class="btn game-btn">ROCK</button>
+          <button id="scissors" class="btn game-btn">PAPER</button>
+          <button id="scissors" class="btn game-btn">SCISSORS</button>
+        </div>
+        <div class="container-ui">
+          <button id="scissors" class="btn game-btn">ROCK</button>
+          <button id="scissors" class="btn game-btn">PAPER</button>
+          <button id="scissors" class="btn game-btn">SCISSORS</button>
+        </div>
       </div>
     </div>
   </body>
