--- a/index.html
+++ b/index.html
@@ -19,15 +19,16 @@
     <div class="wrapper">
       <div class="container">
         <!-- <button id="play" class="btn">Play</button> -->
+        <div class="score">1</div>
         <div class="container-ui">
-          <button id="scissors" class="btn game-btn">ROCK</button>
-          <button id="scissors" class="btn game-btn">PAPER</button>
-          <button id="scissors" class="btn game-btn">SCISSORS</button>
+          <button id="rock-btn" class="btn game-btn">ROCK</button>
+          <button id="paper-btn" class="btn game-btn">PAPER</button>
+          <button id="scissors-btn" class="btn game-btn">SCISSORS</button>
         </div>
         <div class="container-ui">
-          <button id="scissors" class="btn game-btn">ROCK</button>
-          <button id="scissors" class="btn game-btn">PAPER</button>
-          <button id="scissors" class="btn game-btn">SCISSORS</button>
+          <button id="rock-btn" class="btn game-btn">ROCK</button>
+          <button id="paper-btn" class="btn game-btn">PAPER</button>
+          <button id="scissors-btn" class="btn game-btn">SCISSORS</button>
         </div>
       </div>
     </div>
