--- a/index.html
+++ b/index.html
@@ -18,17 +18,25 @@
   <body>
     <div class="wrapper">
       <div class="container">
+        <div class="log">asgoiejpaejiptgiaejpgotjpaegio</div>
         <!-- <button id="play" class="btn">Play</button> -->
-        <div class="score">1</div>
-        <div class="container-ui">
-          <button id="rock-btn" class="btn game-btn">ROCK</button>
-          <button id="paper-btn" class="btn game-btn">PAPER</button>
-          <button id="scissors-btn" class="btn game-btn">SCISSORS</button>
-        </div>
-        <div class="container-ui">
-          <button id="rock-btn" class="btn game-btn">ROCK</button>
-          <button id="paper-btn" class="btn game-btn">PAPER</button>
-          <button id="scissors-btn" class="btn game-btn">SCISSORS</button>
+        <div class="game-containers">
+          <div class="container-ui">
+            <div class="score">0</div>
+            <div class="buttons-ui">
+              <button id="rock-btn" class="btn game-btn">ROCK</button>
+              <button id="paper-btn" class="btn game-btn">PAPER</button>
+              <button id="scissors-btn" class="btn game-btn">SCISSORS</button>
+            </div>
+          </div>
+          <div class="container-ui">
+            <div class="score">0</div>
+            <div class="buttons-ui">
+              <button id="rock-btn" class="btn game-btn">ROCK</button>
+              <button id="paper-btn" class="btn game-btn">PAPER</button>
+              <button id="scissors-btn" class="btn game-btn">SCISSORS</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
