--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <body>
     <div class="wrapper">
       <div class="container">
-        <div class="log">asgoiejpaejiptgiaejpgotjpaegio</div>
         <!-- <button id="play" class="btn">Play</button> -->
+        <div class="log">Score</div>
         <div class="game-containers">
           <div class="container-ui">
             <div class="score">0</div>
