Position a play button and hide UI behind

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     />
     <script src="script.js" defer></script>
     <script src="roshambo.js" defer></script>
+    >
     <title>Roshambo 1.0</title>
   </head>
   <body>
     <div class="wrapper">
       <div class="container">
-        <!-- <button id="play" class="btn">Play</button> -->
+        <button id="play" class="btn">Play</button>
         <div class="log">Score</div>
         <div class="game-containers">
           <div class="container-ui">
