Add game logic into script.js

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <script src="script.js" defer></script>
     <script src="roshambo.js" defer></script>
-    >
+    <script src="script.js" defer></script>
+
     <title>Roshambo 1.0</title>
   </head>
   <body>
@@ -23,7 +23,7 @@
         <div class="log">Score</div>
         <div class="game-containers">
           <div class="container-ui">
-            <div class="score">0</div>
+            <div id="player-score" class="score">0</div>
             <div class="buttons-ui">
               <button id="rock-btn" class="btn game-btn">ROCK</button>
               <button id="paper-btn" class="btn game-btn">PAPER</button>
@@ -31,7 +31,7 @@
             </div>
           </div>
           <div class="container-ui">
-            <div class="score">0</div>
+            <div id="cpu-score" class="score">0</div>
             <div class="buttons-ui">
               <button id="rock-btn" class="btn game-btn">ROCK</button>
               <button id="paper-btn" class="btn game-btn">PAPER</button>
