--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <script src="roshambo.js" defer></script>
+    <!-- <script src="roshambo.js" defer></script> -->
     <script src="script.js" defer></script>
 
     <title>Roshambo 1.0</title>
