--- a/index.html
+++ b/index.html
@@ -33,12 +33,16 @@
           <div class="container-ui">
             <div id="cpu-score" class="score">0</div>
             <div class="buttons-ui">
-              <button id="rock-btn" class="btn game-btn">ROCK</button>
-              <button id="paper-btn" class="btn game-btn">PAPER</button>
-              <button id="scissors-btn" class="btn game-btn">SCISSORS</button>
+              <button id="rock-btn-cpu" class="btn game-btn">ROCK</button>
+              <button id="paper-btn-cpu" class="btn game-btn">PAPER</button>
+              <button id="scissors-btn-cpu" class="btn game-btn">
+                SCISSORS
+              </button>
             </div>
           </div>
         </div>
+        <div id="announce-player" class="announce hidden-a">YOU WIN!</div>
+        <div id="announce-cpu" class="announce hidden-a">CPU WINS!</div>
       </div>
     </div>
   </body>
