Add play again button Add reset game functionality

--- a/index.html
+++ b/index.html
@@ -41,8 +41,17 @@
             </div>
           </div>
         </div>
-        <div id="announce-player" class="announce hidden-a">YOU WIN!</div>
-        <div id="announce-cpu" class="announce hidden-a">CPU WINS!</div>
+        <div id="container-overlay" class="on-top announce hidden-a">
+          <div id="announce-player" class="on-top announce hidden-a">
+            YOU WIN!
+          </div>
+          <div id="announce-cpu" class="on-top announce hidden-a">
+            CPU WINS!
+          </div>
+          <button id="play-again-btn" class="on-top play-again btn hidden-a">
+            Play again?
+          </button>
+        </div>
       </div>
     </div>
   </body>
