--- a/index.html
+++ b/index.html
@@ -25,19 +25,17 @@
           <div class="container-ui">
             <div id="player-score" class="score">0</div>
             <div class="buttons-ui">
-              <button id="rock-btn" class="btn game-btn">ROCK</button>
-              <button id="paper-btn" class="btn game-btn">PAPER</button>
-              <button id="scissors-btn" class="btn game-btn">SCISSORS</button>
+              <button id="rock-btn" class="btn game-btn">✊</button>
+              <button id="paper-btn" class="btn game-btn">✋</button>
+              <button id="scissors-btn" class="btn game-btn">✌</button>
             </div>
           </div>
           <div class="container-ui">
             <div id="cpu-score" class="score">0</div>
             <div class="buttons-ui">
-              <button id="rock-btn-cpu" class="btn game-btn">ROCK</button>
-              <button id="paper-btn-cpu" class="btn game-btn">PAPER</button>
-              <button id="scissors-btn-cpu" class="btn game-btn">
-                SCISSORS
-              </button>
+              <button id="rock-btn-cpu" class="btn game-btn">✊</button>
+              <button id="paper-btn-cpu" class="btn game-btn">✋</button>
+              <button id="scissors-btn-cpu" class="btn game-btn">✌</button>
             </div>
           </div>
         </div>
